# openstack-interpreter

./: .gitignore  AUTHORS  ChangeLog  README.md  README.rst  openstack_interpreter.py  requirements.txt  setup.cfg  setup.py
openstack_interpreter/: plugin.py
openstack_interpreter/common/: output.py  profile.py  prompt.py
openstack_interpreter/v1/: clients.py  command.py  interpreter.py  sdk.py  shade.py
