[metadata]
name = openstack-interpreter
summary = OpenStack Interpreter
description-file =
    README.rst
author = Adrian Turjak
author-email = adriant@catalyst.net.nz
home-page = https://github.com/Adrian-Turjak/openstack-interpreter
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    openstack_interpreter

[entry_points]
openstack.cli.extension =
    interpreter = openstack_interpreter.plugin

openstack.interpreter.v1 =
    interpreter = openstack_interpreter.v1.command:SetupOpenStackInterpreter


[wheel]
universal = 1
